UI Updates - Added basic login and dashboard pages - Added additional material designs - Added two routes (/login, /dashboard)

--- a/public/angular.json
+++ b/public/angular.json
@@ -122,5 +122,10 @@
       }
     }
   },
-  "defaultProject": "viziwyg-ui"
+  "defaultProject": "viziwyg-ui",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
