Introduce datasources infra & add first test datasource

--- a/public/package.json
+++ b/public/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "@types/faker": "^5.5.7",
     "@types/shortid": "0.0.29",
+    "faker": "^5.5.3",
     "rxjs": "~6.5.5",
     "shortid": "^2.2.16",
     "tslib": "^2.0.0",
